feat: Enhance project with PWA support, favicon generation, and sharp image processing
- Add service worker registration for PWA capabilities
- Introduce favicon generation script in package.json
- Update index.html with meta tags and favicon links
- Include sharp library for image processing in devDependencies

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,31 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <meta name="description" content="A modern, feature-rich Tic Tac Toe game built with React and Tailwind CSS">
+  <meta name="theme-color" content="#667eea">
+  
+  <!-- Primary favicon -->
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="shortcut icon" href="/favicon.svg">
+  
+  <!-- Apple Touch Icon -->
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  
+  <!-- Android/Chrome -->
+  <link rel="manifest" href="/site.webmanifest">
+  <meta name="mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <meta name="apple-mobile-web-app-title" content="Tic Tac Toe">
+  
+  <!-- Microsoft Tiles -->
+  <meta name="msapplication-TileColor" content="#667eea">
+  <meta name="msapplication-TileImage" content="/mstile-144x144.png">
+  <meta name="msapplication-config" content="/browserconfig.xml">
+  
+  <title>Tic Tac Toe - Modern React Game</title>
 </head>
 <body>
   <div id="root"></div>
